# haskell-machine-learning

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hxx.cabal  makefile  ml.cabal  package.yaml
app/: Main.hs
docs/notes/: notes.org
src/: Arr.hs  Graphics.hs  GraphicsLib.hs  Net.hs
src/GraphicsLib/: OpenGL.hs  OpenGLWidget.hs  Plot.hs
