cabal-version:       3.0
name:                hxx
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/jaryamsiv/hxx#hxx) for more details.
homepage:            https://github.com/jaryamsiv/hxx
bug-reports:         https://github.com/jaryamsiv/hxx/issues
license:             MIT
license-file:        LICENSE
author:              Vismay Raj
maintainer:          Vismay Raj <vismayraj1@gmail.com>
copyright:           2023 Vismay Raj
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.2

source-repository head
  type:                git
  location:            https://github.com/jaryamsiv/hxx.git

common common-options
  build-depends:       base ^>= 4.15.1.0
                     , monomer
                     , data-default
                     , vector
                     , OpenGLRaw
                     , containers
                     , lens
                     , text
                     , text-show
                     , optparse-applicative

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     GraphicsLib
                     , GraphicsLib.Plot
                     , GraphicsLib.OpenGL
                     , GraphicsLib.OpenGLWidget

executable hxx
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       hxx
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

